# locata2dcase

./: .gitignore  README.md  convert.py  pyproject.toml
